Opened 15 months ago
Closed 14 months ago
#11545 closed defect (fixed)
[dec:libzvbi_teletextdec] Error while opening decoder: Internal bug, should not have happened
| Reported by: | kasper93 | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | libzvbi |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
After 57c545090d75f3adfbd58cf23b23431c751f2fb4 there is line end mismatch from expected in libzvbi-teletextdec.c#L94 which checks \r\n and returns AVERROR_BUG because of that.
How to reproduce:
% ./ffmpeg_g -txt_format 2 -i "F:\dev\sub.ts" sub.mkv ffmpeg version N-119224-gbf327ac676 Copyright (c) 2000-2025 the FFmpeg developers
Fixed by: https://patchwork.ffmpeg.org/project/ffmpeg/list/?series=11717
Attachments (1)
Change History (3)
by , 15 months ago
| Attachment: | sub_short.ts added |
|---|
comment:1 by , 14 months ago
comment:2 by , 14 months ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed by: eb6dc952cbd479bf43673af9ca0bc83f37f8f329